tests/ui/rename/rename_path.stderr
error: unexpected meta-item format `Path`, expected `List`
 --> $DIR/rename_path.rs:5:17
  |
5 |     #[shorthand(rename)]
  |                 ^^^^^^
